--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Identity Radio</title>
     <meta name="description" content="Beyond The Airwaves" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Wenslauce" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
